package com.softinter.sicapi.entity.pm;

import com.softinter.sicapi.entity.base.BaseBusinessEntity;
import com.softinter.sicapi.entity.enums.BillingType;
import com.softinter.sicapi.entity.enums.PaymentStatus;
import jakarta.persistence.*;
import lombok.Data;
import lombok.EqualsAndHashCode;

import java.math.BigDecimal;
import java.time.Instant;
import java.util.UUID;

@Entity
@Table(name = "pm_invoice")
@Data
@EqualsAndHashCode(callSuper = true)
public class PmInvoice extends BaseBusinessEntity {

    @Column(name = "invoice_no", nullable = false, length = 50)
    private String invoiceNo;

    @Column(name = "customer_id", nullable = false)
    private UUID customerId;

    @Column(name = "project_id", nullable = false)
    private UUID projectId;

    @Column(name = "contract_id")
    private UUID contractId;

    @Column(name = "delivery_id")
    private UUID deliveryId;

    @Column(name = "milestone_id")
    private UUID milestoneId;

    @Enumerated(EnumType.STRING)
    @Column(name = "billing_type", nullable = false, length = 30)
    private BillingType billingType = BillingType.MILESTONE;

    @Column(name = "issue_date", nullable = false)
    private Instant issueDate;

    @Column(name = "due_date", nullable = false)
    private Instant dueDate;

    @Column(name = "subtotal_amount", nullable = false, precision = 15, scale = 2)
    private BigDecimal subtotalAmount = BigDecimal.ZERO;

    @Column(name = "vat_rate", precision = 5, scale = 2)
    private BigDecimal vatRate = new BigDecimal("7.00");

    @Column(name = "vat_amount", nullable = false, precision = 15, scale = 2)
    private BigDecimal vatAmount = BigDecimal.ZERO;

    @Column(name = "total_amount", nullable = false, precision = 15, scale = 2)
    private BigDecimal totalAmount = BigDecimal.ZERO;

    @Column(name = "paid_amount", precision = 15, scale = 2)
    private BigDecimal paidAmount = BigDecimal.ZERO;

    @Enumerated(EnumType.STRING)
    @Column(name = "payment_status", nullable = false, length = 20)
    private PaymentStatus paymentStatus = PaymentStatus.UNPAID;

    @Column(name = "approval_status", length = 30)
    private String approvalStatus = "DRAFT";

    @Column(name = "receipt_file_ref", columnDefinition = "TEXT")
    private String receiptFileRef;

    @Column(name = "remark", columnDefinition = "TEXT")
    private String remark;
}
